syntax = "proto3";
package pb;

option go_package = "api/pb";

service Workflow {
  rpc Run(WorkflowRequest) returns (WorkflowReply) {}
}

message WorkflowRequest {
  int64  id = 1;
  string text = 2;
}

message WorkflowReply {
  string text = 1;
}
